--- a/shipa/sample-cp-app-cname.yaml
+++ b/shipa/sample-cp-app-cname.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   forProvider:
     app: cp-deployed-app
-    cname: www.shipaisamazing.com
+    cname: www.shipaisamazingalways.com
     encrypt: no
